hw3-deployment-bd75c8554-72ct9-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 7c7af1bab4275916cb47ee3a840333d6a59307dd8a0ad4dcd1d55eddf3f95135
    cni.projectcalico.org/podIP: 10.42.81.222/32
    cni.projectcalico.org/podIPs: 10.42.81.222/32
  creationTimestamp: '2023-07-29T21:02:32Z'
  generateName: hw3-deployment-bd75c8554-
  labels:
    pod-template-hash: bd75c8554
    workload.user.cattle.io/workloadselector: apps.deployment-default-hw3-deployment
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:generateName: {}
          f:labels:
            .: {}
            f:pod-template-hash: {}
            f:workload.user.cattle.io/workloadselector: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"6e103d4f-d9b3-466a-82c5-80c04c715b2f"}: {}
        f:spec:
          f:affinity: {}
          f:containers:
            k:{"name":"container-0"}:
              .: {}
              f:image: {}
              f:imagePullPolicy: {}
              f:name: {}
              f:ports:
                .: {}
                k:{"containerPort":8080,"protocol":"TCP"}:
                  .: {}
                  f:containerPort: {}
                  f:name: {}
                  f:protocol: {}
              f:resources: {}
              f:securityContext:
                .: {}
                f:allowPrivilegeEscalation: {}
                f:privileged: {}
                f:readOnlyRootFilesystem: {}
                f:runAsNonRoot: {}
              f:terminationMessagePath: {}
              f:terminationMessagePolicy: {}
          f:dnsPolicy: {}
          f:enableServiceLinks: {}
          f:restartPolicy: {}
          f:schedulerName: {}
          f:securityContext: {}
          f:terminationGracePeriodSeconds: {}
      manager: kube-controller-manager
      operation: Update
      time: '2023-07-29T21:02:32Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cni.projectcalico.org/containerID: {}
            f:cni.projectcalico.org/podIP: {}
            f:cni.projectcalico.org/podIPs: {}
      manager: calico
      operation: Update
      subresource: status
      time: '2023-07-29T21:02:33Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:conditions:
            k:{"type":"ContainersReady"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Initialized"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Ready"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
          f:containerStatuses: {}
          f:hostIP: {}
          f:phase: {}
          f:podIP: {}
          f:podIPs:
            .: {}
            k:{"ip":"10.42.81.222"}:
              .: {}
              f:ip: {}
          f:startTime: {}
      manager: kubelet
      operation: Update
      subresource: status
      time: '2023-07-29T21:02:38Z'
  name: hw3-deployment-bd75c8554-72ct9
  namespace: default
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: hw3-deployment-bd75c8554
      uid: 6e103d4f-d9b3-466a-82c5-80c04c715b2f
  resourceVersion: '9504'
  uid: 2949dcda-c76d-44a2-a8dc-6f79d91844f7
spec:
  affinity: {}
  containers:
    - image: shrithika/hw3:0.0.1
      imagePullPolicy: Always
      name: container-0
      ports:
        - containerPort: 8080
          name: nodeport
          protocol: TCP
      resources: {}
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        readOnlyRootFilesystem: false
        runAsNonRoot: false
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-xkg7x
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: hw3-cluster-pool1-e5bcf3a0-wzf46
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: kube-api-access-xkg7x
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: '2023-07-29T21:02:32Z'
      status: 'True'
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: '2023-07-29T21:02:38Z'
      status: 'True'
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: '2023-07-29T21:02:38Z'
      status: 'True'
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: '2023-07-29T21:02:32Z'
      status: 'True'
      type: PodScheduled
  containerStatuses:
    - containerID: >-
        containerd://88bb26245c82c9be8af223d933a337be60abbc93bc28df02f6bb1ac04eb4caf9
      image: docker.io/shrithika/hw3:0.0.1
      imageID: >-
        docker.io/shrithika/hw3@sha256:cc774f44eb88df1b2b530f4092c6f1adb56f68f215ff8162c068f6532094a6a3
      lastState: {}
      name: container-0
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: '2023-07-29T21:02:37Z'
  hostIP: 172.31.93.132
  phase: Running
  podIP: 10.42.81.222
  podIPs:
    - ip: 10.42.81.222
  qosClass: BestEffort
  startTime: '2023-07-29T21:02:32Z'
